--- a/Recurso/templates/consultar_salas.html
+++ b/Recurso/templates/consultar_salas.html
@@ -21,7 +21,7 @@
     </tr>
     {% for s in Sala %}
     <tr>
-      <td>{{s.campusid.nome}}</td>
+      <td>{{s.edificioid.campusid.nome}}</td>
       <td>{{s.edificioid.nome}}</td>
       <td>{{s.recursoid.nome}}</td>
       <td>{{s.lugares}}</td>
